--- a/www/index.html
+++ b/www/index.html
@@ -89,6 +89,7 @@
   <script type="text/javascript" src="cordova.js"></script>
   <script type="text/javascript" src="lib/framework7/js/framework7.min.js"></script>
   <script type="text/javascript" src="js/dbhandler.js"></script>
+  <script type="text/javascript" src="js/internet.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/home.js"></script>
   <script type="text/javascript" src="js/add.js"></script>
