--- a/www/index.html
+++ b/www/index.html
@@ -1,99 +1,99 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- Required meta tags-->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <!-- Color theme for statusbar -->
-  <meta name="theme-color" content="#2196f3">
-  <!-- Your app title -->
-  <title>My App</title>
-  <!-- Path to Framework7 Library CSS, Material Theme -->
-  <link rel="stylesheet" href="lib/framework7/css/framework7.material.css">
-  <link rel="stylesheet" href="lib/framework7/css/framework7.material.colors.min.css">
-  <link rel="stylesheet" href="lib/framework7/css/framework7.icons.css">
+    <!-- Required meta tags-->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- Color theme for statusbar -->
+    <meta name="theme-color" content="#2196f3">
+    <!-- Your app title -->
+    <title>My App</title>
+    <!-- Path to Framework7 Library CSS, Material Theme -->
+    <link rel="stylesheet" href="lib/framework7/css/framework7.material.css">
+    <link rel="stylesheet" href="lib/framework7/css/framework7.material.colors.min.css">
+    <link rel="stylesheet" href="lib/framework7/css/framework7.icons.css">
 
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="font/material-icons.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="font/material-icons.css">
 </head>
-<body>
-  <!-- Views -->
-  <div class="views">
-    <!-- Your main view, should have "view-main" class -->
-    <div class="view view-main">
-      <!-- Pages container, because we use fixed navbar and toolbar, it has additional appropriate classes-->
-      <div class="pages navbar-fixed">
-        <!-- Page, "data-page" contains page name -->
-        <div data-page="index" class="page">
+<body class="theme-custom-red">
+    <!-- Views -->
+    <div class="views">
+        <!-- Your main view, should have "view-main" class -->
+        <div class="view view-main">
+            <!-- Pages container, because we use fixed navbar and toolbar, it has additional appropriate classes-->
+            <div class="pages navbar-fixed">
+                <!-- Page, "data-page" contains page name -->
+                <div data-page="index" class="page">
 
-          <!-- Top Navbar. In Material theme it should be inside of the page-->
-          <div class="navbar">
-            <div class="navbar-inner">
-              <div class="center">find my books</div>
-              <div class="right">
-                  <a href="settings.html" data-view=".view-main" class="link icon-only"><i class="material-icons">settings</i></a>
-              </div>
-            </div>
-          </div>
-          <a href="add.html" data-view=".view-main" class="floating-button color-blue">
-            <i class="material-icons">add</i>
-          </a>
-
-          <!-- Scrollable page content -->
-          <div class="page-content">
-            <div class="content-block">
-              <div class="row books">
-                <script id="book_template" type="text/template7">
-                  {{#each this}}
-                    <div class="col-100 book" data-id="{{id}}">
-                        <div class="row">
-                          <div class="col-25 book-cover">
-                            {{#if @global.internet}}
-                              <img src="{{cover}}" alt="">
-                            {{else}}
-                              <img src="{{@global.default_cover}}" alt="">
-                            {{/if}}
-                          </div>
-                          <div class="col-75 book-info">
-                            {{#if favorite}}
-                              <div class="book-favorite favorite"><i class="material-icons">star</i></div>
-                            {{else}}
-                              <div class="book-favorite"><i class="material-icons">star</i></div>
-                            {{/if}}
-                            <div class="book-title">{{title}}</div>
-                            <div class="book-author">{{author}}</div>
-
-                            <div class="row">
-                              {{#if read}}
-                                <div class="col-50 book-read read"><i class="material-icons">remove_red_eye</i></div>
-                              {{else}}
-                                <div class="col-50 book-read"><i class="material-icons">remove_red_eye</i></div>
-                              {{/if}}
-                              <div class="col-50 book-rate"><span class="score">{{rate}}</span> / <span class="max">10</span></div>
+                    <!-- Top Navbar. In Material theme it should be inside of the page-->
+                    <div class="navbar">
+                        <div class="navbar-inner">
+                            <div class="center">find my books</div>
+                            <div class="right">
+                                    a href="settings.html" data-view=".view-main" class="link icon-only"><i class="material-icons">settings</i></a>
                             </div>
-                          </div>
                         </div>
                     </div>
-                  {{/each}}
-                </script>
+                    <a href="add.html" data-view=".view-main" class="floating-button add">
+                        <i class="material-icons">add</i>
+                    </a>
 
-              </div>
+                    <!-- Scrollable page content -->
+                    <div class="page-content">
+                        <div class="content-block">
+                            <div class="row books">
+                                <script id="book_template" type="text/template7">
+                                    {{#each this}}
+                                        <div class="col-100 book" data-id="{{id}}">
+                                            <div class="row">
+                                                <div class="col-25 book-cover">
+                                                    {{#if @global.internet}}
+                                                        <img src="{{cover}}" alt="">
+                                                    {{else}}
+                                                        <img src="{{@global.default_cover}}" alt="">
+                                                    {{/if}}
+                                                </div>
+                                                <div class="col-75 book-info">
+                                                    {{#if favorite}}
+                                                        <div class="book-favorite favorite"><i class="material-icons">star</i></div>
+                                                    {{else}}
+                                                        <div class="book-favorite"><i class="material-icons">star</i></div>
+                                                    {{/if}}
+                                                    <div class="book-title">{{title}}</div>
+                                                    <div class="book-author">{{author}}</div>
+
+                                                    <div class="row">
+                                                        {{#if read}}
+                                                            <div class="col-50 book-read read"><i class="material-icons">remove_red_eye</i></div>
+                                                        {{else}}
+                                                            <div class="col-50 book-read"><i class="material-icons">remove_red_eye</i></div>
+                                                        {{/if}}
+                                                        <div class="col-50 book-rate"><span class="score">{{rate}}</span> / <span class="max">10</span></div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    {{/each}}
+                                </script>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
 
-  <script type="text/javascript" src="cordova.js"></script>
-  <script type="text/javascript" src="lib/framework7/js/framework7.min.js"></script>
-  <script type="text/javascript" src="js/dbhandler.js"></script>
-  <script type="text/javascript" src="js/internet.js"></script>
-  <script type="text/javascript" src="js/app.js"></script>
-  <script type="text/javascript" src="js/home.js"></script>
-  <script type="text/javascript" src="js/add.js"></script>
-  <script type="text/javascript" src="js/settings.js"></script>
-  <script type="text/javascript" src="js/detail.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="lib/framework7/js/framework7.min.js"></script>
+    <script type="text/javascript" src="js/dbhandler.js"></script>
+    <script type="text/javascript" src="js/internet.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/home.js"></script>
+    <script type="text/javascript" src="js/add.js"></script>
+    <script type="text/javascript" src="js/settings.js"></script>
+    <script type="text/javascript" src="js/detail.js"></script>
 </body>
 </html>
