Changed colours of application

--- a/www/add.html
+++ b/www/add.html
@@ -43,7 +43,7 @@
                         </li>
                         <li>
                             <p class="buttons-row">
-                                <a href="#" class="button button-raised button-fill color-blue search-btn" disabled>search</a>
+                                <a href="#" class="button button-raised button-fill search-btn" disabled>search</a>
                             </p>
                         </li>
                     </ul>
