--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
                         <div class="navbar-inner">
                             <div class="center">find my books</div>
                             <div class="right">
-                                    a href="settings.html" data-view=".view-main" class="link icon-only"><i class="material-icons">settings</i></a>
+                                <a href="settings.html" data-view=".view-main" class="link icon-only"><i class="material-icons">settings</i></a>
                             </div>
                         </div>
                     </div>
