--- a/www/settings.html
+++ b/www/settings.html
@@ -12,6 +12,9 @@
                     </a>
                 </div>
                 <div class="center">Settings</div>
+                <div class="right">
+                  <a class="link icon-only save-btn"><i class="material-icons">done</i></a>
+                </div>
             </div>
         </div>
 
@@ -32,11 +35,6 @@
                                     </div>
                                 </div>
                             </div>
-                        </li>
-                        <li>
-                            <p class="buttons-row">
-                                <a href="#" class="button button-raised button-fill color-blue save-btn">Save</a>
-                            </p>
                         </li>
                     </ul>
                 </div>
