--- a/www/add.html
+++ b/www/add.html
@@ -13,20 +13,12 @@
                 </div>
                 <div class="center">Add a book</div>
                 <div class="right">
-                    <a class="link icon-only scan-btn"><i class="material-icons">camera_alt</i></a>
+                    <a class="link icon-only scan"><i class="material-icons">camera_alt</i></a>
                 </div>
             </div>
         </div>
         <div class="page-content">
             <div class="content-block">
-                <!-- <form class="searchbar search-form">
-                    <div class="searchbar-input">
-                        <input type="search" placeholder="Search" class="search">
-                    </div>
-                </form>
-                <p class="buttons-row">
-                    <a href="#" class="button button-raised button-fill color-blue search-btn">Search</a>
-                </p> -->
 
                 <div class="list-block">
                     <ul>
@@ -43,7 +35,7 @@
                         </li>
                         <li>
                             <p class="buttons-row">
-                                <a href="#" class="button button-raised button-fill search-btn" disabled>search</a>
+                                <a href="#" class="button button-raised button-fill search" disabled>search</a>
                             </p>
                         </li>
                     </ul>
