--- a/www/detail.html
+++ b/www/detail.html
@@ -13,12 +13,12 @@
                 </div>
                 <div class="center">Book detail</div>
                 <div class="right">
-                        <a class="link icon-only save-btn"></a>
+                        <a class="link icon-only save"></a>
                 </div>
             </div>
         </div>
 
-        <a class="floating-button delete-btn">
+        <a class="floating-button delete">
             <i class="material-icons">delete</i>
         </a>
 
