--- a/www/settings.html
+++ b/www/settings.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="center">Settings</div>
                 <div class="right">
-                  <a class="link icon-only save-btn"><i class="material-icons">done</i></a>
+                  <a class="link icon-only save"><i class="material-icons">done</i></a>
                 </div>
             </div>
         </div>
